--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         run: |
           ROOT_DIR=`pwd`
           export PATH=$PATH:$ROOT_DIR/depot_tools
-          cd flutter/engine
+          cd flutter
           git config --global user.email "reflutter@example.com" && git config --global user.name "reflutter"
           git fetch origin $(reflutter -b ${{env.SNAPSHOT_HASH}})
           git reset --hard FETCH_HEAD
@@ -38,7 +38,7 @@ jobs:
           cd $ROOT_DIR
           mkdir customEngine
           cd customEngine
-          echo 'solutions = [{"managed": False, "name": "src/flutter", "url": "'"$ROOT_DIR"'/flutter/engine", "custom_deps": {}, "deps_file": "DEPS", "safesync_url": ""}]' > .gclient
+          echo 'solutions = [{"managed": False, "name": "engine/src/flutter", "url": "'"$ROOT_DIR"'/flutter", "custom_deps": {}, "deps_file": "DEPS", "safesync_url": ""}]' > .gclient
           gclient sync
           reflutter -b ${{env.SNAPSHOT_HASH}}
       - name: ninja build Flutter.framework
@@ -89,7 +89,7 @@ jobs:
         run: |
           ROOT_DIR=`pwd`
           export PATH=$PATH:$ROOT_DIR/depot_tools
-          cd flutter/engine
+          cd flutter
           git config --global user.email "reflutter@example.com" && git config --global user.name "reflutter"
           git fetch origin $(reflutter -b ${{env.SNAPSHOT_HASH}})
           git reset --hard FETCH_HEAD
@@ -99,7 +99,7 @@ jobs:
           cd $ROOT_DIR
           mkdir customEngine
           cd customEngine
-          echo 'solutions = [{"managed": False, "name": "src/flutter", "url": "'"$ROOT_DIR"'/flutter/engine", "custom_deps": {}, "deps_file": "DEPS", "safesync_url": ""}]' > .gclient
+          echo 'solutions = [{"managed": False, "name": "engine/src/flutter", "url": "'"$ROOT_DIR"'/flutter", "custom_deps": {}, "deps_file": "DEPS", "safesync_url": ""}]' > .gclient
           gclient sync
           reflutter -b ${{env.SNAPSHOT_HASH}} -p
       - name: ninja build Flutter.framework
